Added routes for permission group management and added it to the swagger docs
